# motion-demo

./: README.md  log.txt  main.py  mediapipe-demo.py  pyproject.toml
